--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_buyer_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_buyer_card.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <a href="{% url 'phison_panel:buyer_detail' slug=buyer.slug %}">
   <div class="bg-white rounded-2xl p-4 shadow-lg hover:shadow-xl group relative h-full">
     <div class="flex justify-between items-start">
@@ -13,7 +14,7 @@
     <p class="text-sm text-gray-600">{{buyer.customer.phone_number}}</p>
 
     <div class="mt-2 flex w-full bg-gray-300 rounded-lg">
-      <div class="bg-orange-900 text-white text-xs font-semibold py-1 px-2 rounded-lg">5th payment</div>
+      <div class="bg-orange-900 text-white text-xs font-semibold py-1 px-2 rounded-lg" style="width: {{buyer.completed_percentage}}%">{% if buyer.completed_percentage %}{{buyer.completed_percentage}}%{% else %}0%{% endif %} complete</div>
     </div>
 
     <div class="mt-6">
