Allow editing a buyer

--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
@@ -68,7 +68,7 @@
             </a>
           </li>
 
-          <li class="{% if url_name == 'buyer_list' or url_name == 'new_buyer' or url_name == 'buyer_detail' %} bg-purple-900 text-white {% else %} text-gray-600 hover:bg-gray-100 {% endif %} rounded-lg p-2 font-medium mb-3">
+          <li class="{% if url_name == 'buyer_list' or url_name == 'new_buyer' or url_name == 'buyer_detail' or url_name == 'buyer_edit' %} bg-purple-900 text-white {% else %} text-gray-600 hover:bg-gray-100 {% endif %} rounded-lg p-2 font-medium mb-3">
             <a class="flex"  href="{% url 'phison_panel:buyer_list' %}">
               <svg class="mr-2" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path
