--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
@@ -1,7 +1,7 @@
 r{% extends "phison_panel/base_form.html" %}
 {% load static %}
-{% block header_title %} Add New Buyer {% endblock %}
-{% block header_description %} Fill out the following information to add a new buyer {% endblock %}
+{% block header_title %} {% if object %}Edit Buyer{% else %}Add New Buyer{% endif %}{% endblock %}
+{% block header_description %} Fill out the following information to {% if object %} edit a {% else %} add a new {% endif %}buyer{% endblock %}
 
 {% block main_form %}
 <form id="buyerForm" method="post">
@@ -18,6 +18,7 @@ r{% extends "phison_panel/base_form.html" %}
   <div class="mb-4 basis-1/3 flex-grow-0 flex-shrink lg:border-r border-solid border-r-gray-300">
     <h5 class="font-semibold">Property Information</h5>
 
+    {% if not object %}
     <div id="selectedPropertyContainer" class="mt-5 flex hidden">
       <div id="propertyCard"></div>
       <button class="border-none p-2 bg-white rounded-xl outline-none ml-2 self-start" id="removePropertySelection">
@@ -39,9 +40,13 @@ r{% extends "phison_panel/base_form.html" %}
         </p>
       {% endfor %}
     </div>
+    {% else %}
+    {% include 'partials/_property_card.html' with property=object.property class="h-fit mr-8" %}
+    {% endif %}
 
     <h5 class="mt-6 font-semibold">Customer Information</h5>
 
+    {% if not object %}
     <div id="selectedCustomerContainer" class="mt-5 flex hidden">
       <div id="customerCard" class="break-all"></div>
       <button class="border-none p-2 bg-white rounded-xl outline-none ml-2 self-start" id="removeCustomerSelection">
@@ -62,6 +67,18 @@ r{% extends "phison_panel/base_form.html" %}
       </p>
       {% endfor %}
     </div>
+    {% else %}
+    <div class="gap-2 bg-white p-2 rounded-lg hover:bg-gray-100 cursor-pointer mr-8">
+      <div class="mb-2 flex-shrink-0">
+        <img class="object-cover rounded-lg h-32 w-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="Customer picture">
+      </div>
+      <div class="ml-2 break-all">
+        <p class="font-semibold">{{object.customer.name}}</p>
+        <p class="text-sm text-gray-500 font-semibold">{{object.customer.phone}}</p>
+        <p class="text-sm text-gray-500">{{object.customer.email}}</p>
+      </div>
+    </div>
+    {% endif %}
   </div>
 
   <div class="basis-2/3 flex-grow">
