--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
@@ -16,6 +16,7 @@
 }
 </style>
 {% endblock %}
+{% block title %}{{object.name}}{{block.super}}{% endblock title %}
 {% block main %}
 <div>
   <header>
