--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_list.html
@@ -1,4 +1,5 @@
 {% extends 'phison_panel/base_list.html' %}
+{% block title %}Home{{block.super}}{% endblock title %}
 {% block header_title %}Properties List{% endblock %}
 {% block add_button_link %}{% url 'phison_panel:new_property' %}{% endblock %}
 {% block add_button_label %}Add new property{% endblock %}
