--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/staff_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/staff_list.html
@@ -1,4 +1,5 @@
 {% extends 'phison_panel/base_list.html' %}
+{% block title %}Staff List{{block.super}}{% endblock title %}
 {% block header_title %}Staff List{% endblock %}
 {% block add_button_label %}Add Staff{% endblock %}
 {% block header_description %}All of your staff members{% endblock %}
