--- a/phison_realestate_backend/phison_realestate_backend/templates/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Phison Realestate Backend{% endblock title %}</title>
+    <title>{% block title %} - Phison Realestate{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Backend API and web app for administrators.">
     <meta name="author" content="Nebiyu Elias">
