--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
@@ -1,4 +1,5 @@
 {% extends 'phison_panel/base_list.html' %}
+{% block title %}Buyer List{{block.super}}{% endblock title %}
 {% block header_title %}Buyers List{% endblock %}
 {% block add_button_link %}{% url 'phison_panel:new_buyer' %}{% endblock %}
 {% block add_button_label %}Add buyer{% endblock %}
