--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -6,6 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 {{form.media}}
 {% endblock %}
+{% block title %}{% if object %}Edit Property{% else %}Add New Property{% endif %}{{block.super}}{% endblock title %}
 
 {% block main %}
 <div>
