--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_staff_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_staff_card.html
@@ -29,11 +29,13 @@
       src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
       alt="Buyer profile picture">
 
-    <p class="mt-2 font-semibold">{{staff.name}}</p>
-    <p class="text-sm text-gray-500">{{staff.phone_number}}</p>
-    <p class="text-sm text-gray-500">{{staff.email}}</p>
-    {% if not staff.is_active %}
-    <div class="bg-orange-800 text-white text-sm font-semibold p-1">Deactivated</div>
-    {% endif %}
+    <div class="mt-2 flex flex-col items-center">
+      {% if staff.name %}<p class="font-semibold">{{staff.name}}</p>{% endif %}
+      {% if staff.phone %}<p class="text-sm text-gray-500">{{staff.phone_number}}</p>{% endif %}
+      {% if staff.email %}<p class="text-sm text-gray-500">{{staff.email}}</p>{% endif %}
+      {% if not staff.is_active %}
+      <div class="bg-orange-800 text-white text-sm font-semibold p-1 my-1">Deactivated</div>
+      {% endif %}
+    </div>
   </div>
 </div>
