--- a/phison_realestate_backend/phison_realestate_backend/static/css/project.css
+++ b/phison_realestate_backend/phison_realestate_backend/static/css/project.css
@@ -11,3 +11,16 @@
   background-color: #f2dede;
   border-color: #eed3d7;
 }
+
+.toast {
+  animation: fade-out 3s 2s cubic-bezier(0.74, 0.09, 0.38, 1.13) forwards;
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
