--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_detail.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_detail.html
@@ -17,9 +17,7 @@
   <div class="basis-1/4">
     <h5 class="font-semibold">Buyer Information</h5>
     <div class="mt-4 p-4 bg-white rounded-lg">
-      <img class="w-24 h-24 object-cover rounded-2xl"
-        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
-        alt="Buyer profile picture">
+      {% include 'partials/_avatar.html' with initial=object.customer.name class="w-24 h-24 object-cover rounded-2xl" only %}
 
       <p class="font-semibold my-3">{{object.customer.name}}</p>
       <p class="text-sm text-gray-600">{{object.customer.phone_number}}</p>
