--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
@@ -80,7 +80,7 @@
     {% else %}
     <div class="gap-2 bg-white p-2 rounded-lg hover:bg-gray-100 cursor-pointer mr-8">
       <div class="mb-2 flex-shrink-0">
-        <img class="object-cover rounded-lg h-32 w-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="Customer picture">
+        {% include 'partials/_avatar.html' with initial=object.customer.name class="object-cover rounded-lg h-32 w-full" only %}
       </div>
       <div class="ml-2 break-all">
         <p class="font-semibold">{{object.customer.name}}</p>
