--- a/phison_realestate_backend/phison_realestate_backend/templates/account/account_inactive.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/account_inactive.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% translate "Account Inactive" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Account Inactive" %}</h1>
+<h1 class="text-3xl font-semibold text-center my-4">{% translate "Account Inactive" %}</h1>
 
-<p>{% translate "This account is inactive." %}</p>
+<p class="text-center">{% translate "This account is inactive." %}</p>
 {% endblock %}
