--- a/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset.html
@@ -7,19 +7,31 @@
 {% block head_title %}{% translate "Password Reset" %}{% endblock %}
 
 {% block inner %}
-
-    <h1>{% translate "Password Reset" %}</h1>
+    <h1 class="text-3xl font-semibold text-center">{% translate "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="mt-4">{% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" value="{% translate 'Reset My Password' %}" />
+        <div class="relative my-6">
+          <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+            <svg aria-hidden="true" class="w-5 h-5 text-black" fill="currentColor" viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg">
+              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+            </svg>
+          </div>
+          <input type="email" id="id_email" name="email"
+            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-orange-500 focus:border-orange-500 block w-full pl-10 p-2.5"
+            placeholder="Enter your email" required>
+        </div>
+        <button class="bg-purple-900 w-full text-white rounded-lg p-2.5 font-semibold" type="submit">
+          {% translate "Reset My Password" %}
+        </button>
     </form>
 
-    <p>{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
+    <p class="mt-4 text-sm text-gray-500">{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
 {% endblock %}
