--- a/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_done.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_done.html
@@ -6,11 +6,11 @@
 {% block head_title %}{% translate "Password Reset" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Password Reset" %}</h1>
+    <h1 class="text-3xl font-semibold text-center">{% translate "Password Reset" %}</h1>
 
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
+    <p class="mt-4">{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
 {% endblock %}
