--- a/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_from_key.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% translate "Change Password" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% if token_fail %}{% translate "Bad Token" %}{% else %}{% translate "Change Password" %}{% endif %}</h1>
+    <h1 class="text-3xl font-semibold text-center my-4">{% if token_fail %}{% translate "Bad Token" %}{% else %}{% translate "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -14,8 +14,41 @@
         {% if form %}
             <form method="POST" action=".">
                 {% csrf_token %}
-                {{ form|crispy }}
-                <input class="btn btn-primary" type="submit" name="action" value="{% translate 'change password' %}"/>
+
+                <div class="relative mb-6">
+                  <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+                    <svg aria-hidden="true" class="text-black" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                      viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" class="feather feather-key">
+                      <path
+                        d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4">
+                      </path>
+                    </svg>
+
+                  </div>
+                  <input type="password" id="id_password1" name="password1"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-orange-500 focus:border-orange-500 block w-full pl-10 p-2.5"
+                    placeholder="New password" required>
+                </div>
+
+                <div class="relative mb-6">
+                  <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+                    <svg aria-hidden="true" class="text-black" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                      viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" class="feather feather-key">
+                      <path
+                        d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4">
+                      </path>
+                    </svg>
+
+                  </div>
+                  <input type="password" id="id_password2" name="password2"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-orange-500 focus:border-orange-500 block w-full pl-10 p-2.5"
+                    placeholder="New Password (again)" required>
+                </div>
+                <button class="bg-purple-900 w-full text-white rounded-lg p-2.5 font-semibold" type="submit" name="action">
+                  {% translate "Change Password" %}
+                </button>
             </form>
         {% else %}
             <p>{% translate 'Your password is now changed.' %}</p>
