--- a/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_from_key_done.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,6 @@
 {% block head_title %}{% translate "Change Password" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Change Password" %}</h1>
-    <p>{% translate 'Your password is now changed.' %}</p>
+    <h1 class="text-3xl font-semibold text-center my-4">{% translate "Change Password" %}</h1>
+    <p class="text-center">{% translate 'Your password is now changed.' %}</p>
 {% endblock %}
