Show property price in detail

--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
@@ -1,4 +1,5 @@
 {% extends "phison_panel/base.html" %}
+{% load humanize %}
 {% load static %}
 {% load embed_video_tags %}
 {% block css %}
@@ -104,6 +105,12 @@
       <div class="flex items-center">
         <p class="font-semibold tex-sm basis-28">Description</p>
         <p class="text-gray-600 text-xs">{{object.description}}</p>
+      </div>
+
+      <!-- Price -->
+       <div class="mt-5 flex items-center">
+        <p class="font-semibold tex-sm basis-28">Price($)</p>
+        <p class="text-gray-600 text-xs">{{object.price | intcomma}}</p>
       </div>
 
       <!-- Location -->
